Add missing datastore entry for switch-bot-mcp-server in .octocov.yml

--- a/.octocov.yml
+++ b/.octocov.yml
@@ -2,6 +2,7 @@ central:
   reports:
     datastores:
       - artifact://yasu89/switch-bot-api-go
+      - artifact://yasu89/switch-bot-mcp-server
   badges:
     datastores:
       - local://badges
